restore auto font size on value labels